--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         
         <!-- <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet"> -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png"> 
+        <link rel="stylesheet" href="./css/style.css">
+        <link rel="shortcut icon" type="image/png" href="./img/favicon.png"> 
         
         <title>JF Molderez &mdash; home page</title>
     </head>
